# SER

./: .gitignore  EDA.ipynb  FEATURES_EXTRACTION.ipynb  TEST_ML.ipynb  TRAINING_ML.ipynb  data&sources.ipynb  feature_extractor.py  harmonize&split.ipynb  media_mngmt_temp.ipynb  media_mngmt_temp_2.ipynb  parquet_converter.ipynb  pyproject.toml  test_set_HOLDOUT.csv  train_dev_complete.csv
CREMA-D/: crema_complete_files.csv
EMOITA/: .gitignore  emoita_complete_files.csv  emoita_dev_files.csv  emoita_test_files.csv  emoita_train_files.csv  speakers.csv
RAVDESS/: ravdess_complete_files.csv  ravdess_dev_files.csv  ravdess_test_files.csv  ravdess_train_files.csv
RAVDESS/1.1.3/: db.pkl
RAVDESS/1.1.3/fe182b91/: db.emotion.song.dev.csv  db.emotion.song.dev.parquet  db.emotion.song.test.csv  db.emotion.song.test.parquet  db.emotion.song.train.csv  db.emotion.song.train.parquet  db.emotion.speech.dev.csv  db.emotion.speech.dev.parquet  db.emotion.speech.test.csv  db.emotion.speech.test.parquet  db.emotion.speech.train.csv  db.emotion.speech.train.parquet  db.files.csv  db.files.parquet  db.yaml
SAVEE/: savee_complete_files.csv
TESS/: MANIFEST.TXT  tess_complete_files.csv
crema-d/1.3.0/fe182b91/: db.age.emotional.test.csv  db.age.test.csv  db.age.train.csv  db.emotion.categories.desired.dev.csv  db.emotion.categories.desired.train.csv  db.emotion.categories.dev.votes.csv  db.emotion.categories.face.dev.csv  db.emotion.categories.face.test.csv  db.emotion.categories.face.test.votes.csv  db.files.csv  db.yaml  (+7 more)
emozionalmente/1.0.0/: db.pkl
misc/: emotions_color_codes
(+33 files in other folders)
