[project]
name = "ser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audb>=1.11.4",
    "fastparquet>=2025.12.0",
    "joblib>=1.5.3",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "opensmile>=2.6.0",
    "pandas>=2.3.3",
    "pyloudnorm>=0.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
